--- a/index.ipynb
+++ b/index.ipynb
@@ -155,8 +155,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    travel_destinations.append('madagascar')\n",
-    "    return (travel_destinations)[6]"
+    "    words = "
    ]
   },
   {
