--- a/index.ipynb
+++ b/index.ipynb
@@ -193,6 +193,8 @@
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
+    "travel_destinations.append('madagascar')\n",
+    "    return (travel_destinations)[6]\n",
     "favorite_destination()\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
