--- a/index.ipynb
+++ b/index.ipynb
@@ -188,15 +188,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-14-6445c6da1613>, line 3)",
+     "evalue": "invalid syntax (<ipython-input-15-096b525ac5c0>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-6445c6da1613>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    def favorite_destination()\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-096b525ac5c0>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    def favorite_destination()\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -205,8 +205,7 @@
     "\n",
     "def favorite_destination()\n",
     "    travel_destinations.append('madagascar')\n",
-    "    return (travel_destinations)\n",
-    "travel_destinations[-1] # 'madagascar'"
+    "    return travel_destinations[-1] # 'madagascar'"
    ]
   },
   {
