automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -153,10 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def favorite_destination():\n",
-    "    words = 'madagascar'\n",
-    "    return words"
+    "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n"
    ]
   },
   {
@@ -188,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
