--- a/index.ipynb
+++ b/index.ipynb
@@ -153,7 +153,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n"
+    "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
+    "def favorite_destination"
    ]
   },
   {
