--- a/index.ipynb
+++ b/index.ipynb
@@ -154,7 +154,8 @@
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def favorite_destination"
+    "def favorite_destination()\n",
+    "    travel_destinations"
    ]
   },
   {
