--- a/index.ipynb
+++ b/index.ipynb
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,9 @@
     "\n",
     "def favorite_destination():\n",
     "    travel_destinations.append('madagascar')\n",
-    "    return travel_destinations[-1] # 'madagascar'"
+    "    return travel_destinations[-1]\n",
+    "# 'madagascar'\n",
+    "\n"
    ]
   },
   {
