--- a/index.ipynb
+++ b/index.ipynb
@@ -205,8 +205,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "\n",
-    "def favorite_destination():\n",
-    "    return travel_destinations[-1]\n",
+    "favorite_desti\n",
     "# 'madagascar'\n",
     "\n",
     "favorite_destination"
