automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -205,7 +205,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "\n",
-    "favorite_desti\n",
+    "favorite_destinaton()\n",
+    "travel_destinations[-1]\n",
     "# 'madagascar'\n",
     "\n",
     "favorite_destination"
