--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,9 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    travel_destinations.title\n",
+    "    return travel_destinations.title\n",
+    "\n",
+    "capit\n",
     "    "
    ]
   },
