automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -226,6 +226,8 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    capitalized countries = []\n",
+    "    for co\n",
+    "        \n",
     "    "
    ]
   },
