--- a/index.ipynb
+++ b/index.ipynb
@@ -226,7 +226,8 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    capitalized countries = []\n",
-    "    for destination in \n",
+    "    for destination in travel_destinations:\n",
+    "        \n",
     "        \n",
     "    "
    ]
