--- a/index.ipynb
+++ b/index.ipynb
@@ -227,7 +227,7 @@
     "def capitalize_countries():\n",
     "    capitalized countries = []\n",
     "    for destination in travel_destinations:\n",
-    "        \n",
+    "        capitalizaed.\n",
     "        \n",
     "    "
    ]
