automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -227,7 +227,7 @@
     "def capitalize_countries():\n",
     "    capitalized countries = []\n",
     "    for destination in travel_destinations:\n",
-    "        capitalizaed.\n",
+    "        capitalized countries.append()\n",
     "        \n",
     "    "
    ]
