--- a/index.ipynb
+++ b/index.ipynb
@@ -228,6 +228,7 @@
     "    capitalized countries = []\n",
     "    for destination in travel_destinations:\n",
     "        capitalized countries.append(destination.title)\n",
+    "    return capitalizaed\n",
     "        \n",
     "    "
    ]
