--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    capitalized countries = []\n",
+    "    capitalized_countries = []\n",
     "    for destination in travel_destinations:\n",
     "        capitalized countries.append(destination.title)\n",
     "    return capitalized countries\n",
