automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,21 +235,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>,\n",
-       " <function str.title>]"
+       "['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
