automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
     "def capitalize_countries():\n",
     "    capitalized_countries = []\n",
     "    for destination in travel_destinations:\n",
-    "        capitalized_countries.append(destination.title())\n",
+    "        capitalized_countries.append(destination.title() + 'Sucks')\n",
     "    return capitalized_countries\n",
     "        \n",
     "    "
@@ -235,16 +235,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
+       "['ArgentinaSucks',\n",
+       " 'MexicoSucks',\n",
+       " 'ItalySucks',\n",
+       " 'FinlandSucks',\n",
+       " 'CanadaSucks',\n",
+       " 'CroatiaSucks']"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
