automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
     "def capitalize_countries():\n",
     "    capitalized_countries = []\n",
     "    for destination in travel_destinations:\n",
-    "        capitalized_countries.append(destination.title() + 'Sucks')\n",
+    "        capitalized_countries.append(destination.title() + ' Ru')\n",
     "    return capitalized_countries\n",
     "        \n",
     "    "
@@ -235,21 +235,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['ArgentinaSucks',\n",
-       " 'MexicoSucks',\n",
-       " 'ItalySucks',\n",
-       " 'FinlandSucks',\n",
-       " 'CanadaSucks',\n",
-       " 'CroatiaSucks']"
+       "['Argentina Sucks',\n",
+       " 'Mexico Sucks',\n",
+       " 'Italy Sucks',\n",
+       " 'Finland Sucks',\n",
+       " 'Canada Sucks',\n",
+       " 'Croatia Sucks']"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
