automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
     "def capitalize_countries():\n",
     "    capitalized_countries = []\n",
     "    for destination in travel_destinations:\n",
-    "        capitalized_countries.append(destination.title() + ' Ru')\n",
+    "        capitalized_countries.append(destination.title() + ' Rules')\n",
     "    return capitalized_countries\n",
     "        \n",
     "    "
@@ -235,21 +235,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Argentina Sucks',\n",
-       " 'Mexico Sucks',\n",
-       " 'Italy Sucks',\n",
-       " 'Finland Sucks',\n",
-       " 'Canada Sucks',\n",
-       " 'Croatia Sucks']"
+       "['Argentina Rules',\n",
+       " 'Mexico Rules',\n",
+       " 'Italy Rules',\n",
+       " 'Finland Rules',\n",
+       " 'Canada Rules',\n",
+       " 'Croatia Rules']"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,9 +267,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Argentina Rules',\n",
+       " 'Mexico Rules',\n",
+       " 'Italy Rules',\n",
+       " 'Finland Rules',\n",
+       " 'Canada Rules',\n",
+       " 'Croatia Rules',\n",
+       " 'Japan Rules']"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "capitalize_countries() # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']\n",
